# FS_Commander_Lua_shell_itmo_spring2021

./: CMakeLists.txt  README.md  check.lua  genius_commander.c  genius_commander.h  genius_info.c  genius_info.h  genius_info_wrap.c  launch.lua  list.c  list.h  main.c  run.lua
